[workspace]
members = ["lib", "script", "program"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"

[workspace.dependencies]
sp1-sdk = "5.2.3"
sp1-build = "5.2.3"
sp1-zkvm = "5.2.3"

# misc
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
base64 = "0.13"
anyhow = "1.0"
sha2-v0-10-9 = { version = "0.10.9", package = "sha2" }
rsa = { version = "=0.9.6", features = ["serde", "sha2"] }
blake2 = "0.10.6"

[patch.crates-io]
sha2-v0-10-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-4.0.0" }
rsa = { git = "https://github.com/sp1-patches/RustCrypto-RSA/", tag = "patch-0.9.6-sp1-5.0.0" }
